<resources>
    <string name="app_name">Card Game V1</string>
    <string name="picture">Picture</string>
    <string name="card_library">Card Library</string>
    <string name="name">Name:</string>
    <string name="mana_cost">Mana Cost:</string>
    <string name="life">Life:</string>
    <string name="attack">Attack:</string>
    <string name="defense">Defense:</string>
    <string name="champion_type">Champion:</string>
    <string name="illegal_argument">Cannot Query URI</string>
    <string name="unknown_uri">"Unknown uri "</string>
    <string name="with_match"> with match </string>
    <string name="insert_failed">Insert failed, something went wrong :(</string>
    <string name="deletion_failure">Deletion not supported for </string>
    <string name="update_failed">Updating the card has failed :(</string>
    <string name="success">Save successful!</string>
    <string name="failure">Save failed, please try again</string>
    <string name="add_image">Add Image</string>
    <string name="new_card">New Card</string>
    <string name="ascender">Ascender</string>
    <string name="champion_selection">selection</string>
    <string name="save">Save</string>
    <string name="champion_ability_description">Champion Ability Description</string>
    <string name="champion_description">Champion Description</string>
    <string name="universal">Universal</string>
    <string name="validation_failed">Please fill out all fields, add cards, and try again!</string>
    <string name="delete_message">Are you sure you want to delete this?</string>
    <string name="delete_progress">Are you sure you want to delete your changes?</string>
    <string name="discard">Discard</string>
    <string name="discard_and_quit">Discard changes and quit editing?</string>
    <string name="continue_editing">Continue Editing</string>
    <string name="blank"> </string>
    <string name="delete_button">Delete</string>
    <string name="delete">Delete</string>
    <string name="deck_name">Deck Name:</string>
    <string name="signin_other_error">There was a problem logging in. Please try again!</string>
    <string name="signin_failure">Unable to sign in.</string>
    <string name="sign_in">Sign In</string>
    <string name="vs">VS</string>
    <string name="searching_for_opponent">Searching for Opponent</string>
</resources>
