<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kevin.android.cardgamev1.creationtools.champions.ChampionCreator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/name"
            android:textSize="15sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/champion_creator_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_weight="4"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="15"
            android:textColor="@color/black"
            android:textSize="12sp"
            />

        <Button
            android:id="@+id/champion_creator_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

    </LinearLayout>
        <LinearLayout
            style="@style/card_creator_horizontal_layout_wrapper">
            <TextView
                android:text="@string/add_image"
                style="@style/card_creator_left_text_view"
                />
            <Button
                android:id="@+id/champion_creator_image_button"
                style="@style/card_creator_increment_buttons"

                android:text="@string/add_image" />

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:id="@+id/champion_creator_image_view" />

        </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/champion_creator_edit_text_description"
        android:hint="@string/champion_description"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:inputType="text"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/champion_creator_edit_text_ability"
        android:hint="@string/champion_ability_description"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:inputType="text"
        />

</LinearLayout>
